--- a/netlify.toml
+++ b/netlify.toml
@@ -40,3 +40,8 @@
   port = 8888
   publish = "public"
   autoLaunch = false
+
+[[headers]]
+  for = "/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "*"
