--- a/netlify.toml
+++ b/netlify.toml
@@ -25,7 +25,7 @@
   package = "netlify-plugin-submit-sitemap"
 
 	[plugins.inputs]
-    baseUrl = "https://engagecherise.netlify.app/"
+    baseUrl = "/"
     sitemapPath = "/sitemap.xml"
     ignorePeriod = 0
     providers = [
