--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -38,13 +38,13 @@ isPlainText = true
 notAlternative = true
 
 # add output format for section sitemap.xml
-# [outputFormats.SITEMAP]
-# mediaType = "application/xml"
-# baseName = "sitemap"
-# isHTML = false
-# isPlainText = true
-# noUgly = true
-# rel  = "sitemap"
+[outputFormats.SITEMAP]
+mediaType = "application/xml"
+baseName = "sitemap"
+isHTML = false
+isPlainText = true
+noUgly = true
+rel  = "sitemap"
 
 [caches]
   [caches.getjson]
